--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 
 <html> 
 <head>
-    <title>index</title>
+    <title>蜗牛爱上星星</title>
 </head>
 <body>
-    <h1 style="text-align: center">实验室招带奖学金的研究生的详细信息</h1>
-  <ul style="text-align: center">
-    <li>学校： 韩国釜山大学</li>
-    <li>实验室名称：<a href="http://dblab.pusan.ac.kr/xe/aboutProfessor">数据库&大数据实验室</a></li>
-    <li>奖学金数额：足够</li>
-    <li>实验室项目：私聊</li>
-    <li>教授要求：有一定的编程功底，C++或者Java </li>
-    <li>入学时间：下学期春季入学，也就是2019年2月份左右</li>
-   <ul>
-     
-     <h3 style="text-align: center">如果你对上面信息感兴趣，可以进一步私聊。 微信 或者 E-mail: liangyhgood@qq.com</h3>
+   <a href="https://blog.csdn.net/liangyihuai">MY BLOG</a>
 </body>
 <html>
 
