--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>蜗牛爱上星星</title>
 </head>
 <body>
-   <a href="https://blog.csdn.net/liangyihuai">MY BLOG</a>
+    <div align="center">
+   
+        
+        <a href="https://blog.csdn.net/liangyihuai"><img src="1_liangyihuai.jpg"  alt="贪玩的🐌" /></a>
+    </div>
 </body>
 <html>
 
