--- a/TianXiu/index.html
+++ b/TianXiu/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><HTML 
 xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><HEAD><META 
 content="IE=11.0000" http-equiv="X-UA-Compatible">
@@ -57,14 +57,32 @@ class="say"></SPAN><BR><SPAN class="say">*
 class="say"></SPAN><BR><SPAN class="say">* 
 在向我眨眼，在向我微笑！</SPAN>
 
+<BR><SPAN 
+class="say"></SPAN><BR><SPAN class="say">* 
+情人节快乐！</SPAN>
+
 <BR><SPAN class="say"></SPAN>
 
 <BR><SPAN class="say"><SPAN class="space"></SPAN>---- 蜗牛爱上星星</SPAN>			   </FONT>
 <P></P></DIV></DIV>
 <DIV id="clock-box">今天是我们认识的</SPAN>                
    
-<DIV id="clock"></DIV></DIV><CANVAS width="1100" height="680" 
+<DIV id="clock"></DIV></DIV><CANVAS width="1100" height="680"
 id="canvas"></CANVAS>             </DIV></DIV>
+
+<!--background music-->
+<script language="javascript" type="text/javascript">
+    function autoPlay(){
+        var myAuto = document.getElementById('myaudio');
+        myAuto.play();
+    }
+</script>
+
+<audio id="myaudio" src="wait_for_me.m4a" controls="controls" loop="true" hidden="true" >
+</audio>
+<!--<input type="button" onclick="autoPlay()" value="播放"/>-->
+
+
 <SCRIPT>
 
     (function(){
@@ -132,6 +150,9 @@ id="canvas"></CANVAS>             </DIV></DIV>
                 canvas.unbind("mousemove");
                 canvas.removeClass('hand');
             }
+
+            autoPlay();//play music
+
         }).mousemove(function(e){
             var offset = canvas.offset(), x, y;
             x = e.pageX - offset.left;
@@ -224,28 +245,11 @@ id="canvas"></CANVAS>             </DIV></DIV>
 
         runAsync().start();
     })();
-    </SCRIPT>     				     </div>
-				</div>
-			</div>
-</div>
-	<div class="bg1">	
-		<div class="main">
-			<footer style="line-height:20px">
-                <div id="copyright">
-                    <div align="center"></div>
-                  </object>
-                </div>
-		</div>
-	</div>
-</div>
-<audio id="bgmMusic" src="http://qzone.haoduoge.com/music/C2C3F0LSXH4D771253124A26CF9C71C939B2A.mp3" preload="auto" type="audio/mp3" autoplay loop></audio>
+    </SCRIPT>
 
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"1","bdPos":"right","bdTop":"100"},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-<!-- 51bbw.cn Baidu tongji analytics -->
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fc5987e1ba8b95bbc85efa2ecefbfc06e' type='text/javascript'%3E%3C/script%3E"));
-</script>
+
+
+
 </body>
 </html>
 <SCRIPT Language=VBScript><!--
