--- a/index.html
+++ b/index.html
@@ -587,9 +587,9 @@ header, .context-menu, .megamenu-content, footer{
 
 
  @media print { @page {margin: 0 0 0 0;} body.typora-export {padding-left: 0; padding-right: 0;} #write {padding:0;}}
-</style><title>index</title>
+</style><title></title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><p><span>fdsf</span></p><p>&nbsp;</p><p><span>#Hello </span></p><p>&nbsp;</p><p><span>fsdf</span></p><h1 id='hello'><span>Hello </span></h1><p><img src="figures/blockchain_medical_rebalancing.png" referrerpolicy="no-referrer" alt="blockchain_medical_rebalancing"></p><p>&nbsp;</p><p>&nbsp;</p><figure><table><thead><tr><th><span>Ee</span></th><th><span>ee</span></th><th><span>ww</span></th></tr></thead><tbody><tr><td><span>3</span></td><td>&nbsp;</td><td>&nbsp;</td></tr><tr><td>&nbsp;</td><td><span>3</span></td><td>&nbsp;</td></tr><tr><td>&nbsp;</td><td>&nbsp;</td><td><span>5</span></td></tr></tbody></table></figure><p>&nbsp;</p><ul><li><span>这是一个链接 </span><a href='resume.html'><span>我的简历</span></a></li></ul><ul><li><a href='thesis.html'><span>我的thesis </span></a></li></ul></div></div>
+<div id='write'  class=''><p><img src="/Users/liang/Downloads/simple-website-template-gh-pages/background.jpg" referrerpolicy="no-referrer" alt="background"></p><p><span>, </span></p><figure><table><thead><tr><th><a href='resume.html'><span>我的简历</span></a></th><th><a href='thesis.html'><span>我的thesis </span></a></th><th><a href='thesis.html'><span>我的thesis </span></a></th><th><a href='thesis.html'><span>我的thesis </span></a></th></tr></thead><tbody></tbody></table></figure><h1 id='正文'><span>正文：</span></h1><p><span>fsdfs</span></p><p><span>sdfsfsfd</span></p></div></div>
 </body>
 </html>
